# easy68k-qt

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  PROGRESS.md  README.md
cmake/: CompilerWarnings.cmake
doc/: code_transfer_plan.md  execution_plan.md  future_backlog.md  implementation_agent_prompt.md  porting_proposal.md
doc/execution_plan/: _preamble.md  feature-coverage-matrix.md  phase-0-project-infrastructure.md  phase-1-types-and-memory-easy68k-qt-transfer-code-transfer-plan-sections-31-32.md  phase-10-golden-simulation-traces-proposal-section-5.md  phase-11-exception-and-interrupt-tests.md  phase-12-ci-and-code-quality.md  phase-13-gui-implementation.md  phase-2-s-record-loader-easy68k-qt-transfer-code-transfer-plan-section-37.md  phase-3-addressing-modes-port-from-original-easy68ksim68kscancpp.md  phase-4-simulator-core-port-from-original-easy68ksim68kruncpp-externh-varh.md  phase-5-instruction-decoder-port-from-original-easy68ksim68kcode1-code8cpp.md  phase-6-opcode-implementation-port-from-original-easy68ksim68kcode1-code9cpp.md  phase-7-trap-15-dispatch-port-from-original-easy68ksim68kcode9cpp.md  phase-8-assembler-port-from-original-easy68kedit68k.md  phase-9-simulator-core-library-full-parity-headless-readiness.md  summary-quality-gate-checklist.md
gui/: CMakeLists.txt
gui/easybin/: CMakeLists.txt
gui/editor/: CMakeLists.txt
gui/simulator/: CMakeLists.txt
include/easym68k/asm/: assembler.h  code_generator.h  expression.h  instruction_table.h  lexer.h  parser.h  symbol_table.h
include/easym68k/sim/: addressing_mode.h  cpu_state.h  effective_addr.h  flag_computation.h  ifile_io.h  igraphics_io.h  ilogger.h  inetwork_io.h  iperipheral_io.h  iprint_io.h  iserial_io.h  isimulator_env.h  isound_io.h  itext_io.h  memory.h  simulator.h  srecord_loader.h  trap15.h  types.h
src/asm/: CMakeLists.txt  assembler.cc  code_generator.cc  expression_evaluator.cc  instruction_table.cc  lexer.cc  parser.cc  symbol_table.cc
src/sim/: CMakeLists.txt  addressing_mode.cc  decode.cc  flag_computation.cc  memory.cc  opcodes_arithmetic.cc  opcodes_branch.cc  opcodes_logic.cc  opcodes_misc.cc  opcodes_move.cc  opcodes_shift.cc  simulator.cc  srecord_loader.cc  trap15_dispatch.cc
tests/: CMakeLists.txt
tests/asm/: assembler_test.cc  code_generator_test.cc  conditional_assembly_test.cc  directives_test.cc  expression_test.cc  instruction_table_test.cc  lexer_test.cc  movem_test.cc  parser_test.cc  symbol_table_test.cc
tests/sim/: addressing_mode_test.cc  decode_test.cc  effective_addr_test.cc  flag_computation_test.cc  memory_test.cc  opcodes_arithmetic_test.cc  opcodes_branch_test.cc  opcodes_logic_test.cc  opcodes_misc_test.cc  opcodes_move_test.cc  opcodes_shift_test.cc  simulator_test.cc  srecord_loader_test.cc  trap15_mock_test.cc
